# novaeco-devtools

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-novaeco/: action.yml
.github/workflows/: devtools-ci.yml  devtools-lint.yml  devtools-release.yml  devtools-sast.yml  shared-component-ci.yml  shared-component-lint.yml  shared-component-release.yml  shared-component-sast.yml
docker/node/: Dockerfile
docker/python/: Dockerfile
docker/unified/: Dockerfile
node/: Dockerfile
nova-cli/: setup.py
nova-cli/src/nova_cli/: main.py
nova-cli/src/nova_cli/commands/: version.py  workspace.py
novaeco-cli/: pyproject.toml  setup.py
novaeco-cli/src/novaeco_cli/: main.py
novaeco-cli/src/novaeco_cli/commands/: audit.py  build.py  bump.py  check.py  clean.py  deps.py  docs.py  export.py  test.py  version.py  workspace.py
novaeco-cli/src/novaeco_cli/utils/: reporting.py
novaeco-cli/tests/integration/: test_bump_integration.py
novaeco-cli/tests/unit/commands/: test_bump.py
novaeco-cli/tests/unit/utils/: test_reporting.py
